[package]
name = "rumblr"
version = "1.0.0"
authors = ["Xavier Lau <c.estlavie@icloud.com>"]
edition = "2018"
description = "Tumblr's Api Client"
repository = "https://github.com/AurevoirXavier/rumblr"

[dependencies]
failure = "*"
oauth-client = "*"
rand = "*"
reqwest = "0.9.5"
serde = "*"
serde_derive = "*"
serde_json = "*"
