[package]
name = "rumblr"
version = "1.0.0"
edition = "2018"
authors = ["Xavier Lau <c.estlavie@icloud.com>"]
repository = "https://github.com/AurevoirXavier/rumblr"
description = "Tumblr's Api Client"
keywords = ["tumblr", "api", "client"]
license = "MIT/Apache-2.0"

[dependencies]
failure = "*"
oauth-client = "*"
rand = "*"
reqwest = "0.9.5"
serde = "*"
serde_derive = "*"
serde_json = "*"
