[package]
name = "rumblr"
version = "2.0.2"
edition = "2018"
authors = ["Xavier Lau <c.estlavie@icloud.com>"]
repository = "https://github.com/AurevoirXavier/rumblr"
description = "Tumblr APIs Client"
readme = "README.md"
keywords = ["tumblr", "api", "client"]
license = "MIT/Apache-2.0"

[dependencies]
failure = "0.1.3"
oauth-client = "0.4.0"
reqwest = "0.9.5"
serde = "1.0.83"
serde_derive = "1.0.83"
serde_json = "1.0.33"
